- Implemented: Styles folder can have its own images folder to overwrite stock images
- Implemented: Telegram notifications
- Implemented: Voltage/Current for Armbian Kernal 4.14+
- Implemented: Webserver: automatically reload SSL certificates and DH params3
- Implemented: Xiaomi Aqara Cube
- Implemented: ZWave node ID to log
- Updated: Dzvents (version 2.4.6, See dzVents/documentation/history.md)
- Updated: OenZWave driver and configuration files
- Updated: Translation files
- Updated: Various internal libraries (C++/WWW)
- Changed: Floorplans now stored in database
- Changed: Improved color dimmer support
- Changed: Internal HUE/RGB/W/WW handling
- Changed: Philips Hue: internal code
- Fixed: Various, see github

Version 3.8153 (July 30th 2017)
- Fixed: Camera Editor, will now always refresh thumbnail in table
- Fixed: Devices could become invisible when a scene/group was added to the 'hidden devices' room plan with the same idx
- Fixed: JSon float/nan value, solved by upgrading JSonCPP
- Fixed: OZW, when a value is updated and the sensor did not exists before (for example a kWh sensor), it is created (saves a restart)
- Fixed: Daemonize compatible with Systemd forking type
- Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
- Changed: Lessen rounding errors for computed energy
- Changed: Minimized On/Off/Script execution time
- Changed: SolarEdgeAPI, now only needs API Key
- Changed: Support symlinks for plugin and theme directories
- Changed: Switch type 'Door Lock' renamed to 'Door Contact'
- Changed: Temperature Only charts will not display the Humidity axis
- Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
- Changed: Updated OpenZWave (and configuration files)
- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
- Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW