@@ -607,7 +607,6 @@
     <ClInclude Include="..\notifications\NotificationHTTP.h" />
     <ClInclude Include="..\notifications\NotificationKodi.h" />
     <ClInclude Include="..\notifications\NotificationLogitechMediaServer.h" />
-    <ClInclude Include="..\notifications\NotificationNma.h" />
     <ClInclude Include="..\notifications\NotificationProwl.h" />
     <ClInclude Include="..\notifications\NotificationPushalot.h" />
     <ClInclude Include="..\notifications\NotificationPushbullet.h" />
@@ -956,7 +955,6 @@
     <ClCompile Include="..\notifications\NotificationHTTP.cpp" />
     <ClCompile Include="..\notifications\NotificationKodi.cpp" />
     <ClCompile Include="..\notifications\NotificationLogitechMediaServer.cpp" />
-    <ClCompile Include="..\notifications\NotificationNma.cpp" />
     <ClCompile Include="..\notifications\NotificationProwl.cpp" />
     <ClCompile Include="..\notifications\NotificationPushalot.cpp" />
     <ClCompile Include="..\notifications\NotificationPushbullet.cpp" />
