@@ -1,21 +1,0 @@
-#pragma once
-#include "NotificationBase.h"
-
-class CNotificationNma : public CNotificationBase {
-public:
-	CNotificationNma();
-	~CNotificationNma();
-	virtual bool IsConfigured();
-protected:
-	virtual bool SendMessageImplementation(
-		const uint64_t Idx,
-		const std::string &Name,
-		const std::string &Subject,
-		const std::string &Text,
-		const std::string &ExtraData,
-		const int Priority,
-		const std::string &Sound,
-		const bool bFromNotification);
-private:
-	std::string _apikey;
-};
