@@ -396,24 +396,11 @@
 									<br>
 								</div>
 								<div class="span6">
-									<h2><span data-i18n="NMA (Android)"></span>:</h2>
-									<table class="display" id="nmatable" border="0" cellpadding="0" cellspacing="0">
-									<tr>
-										<td align="right" style="width:80px"><span data-i18n="Enabled"></span>:</td>
-										<td><input type="checkbox" id="NMAEnabled" name="NMAEnabled"/><label for="NMAEnabled"/></td>
-									</tr>
-									<tr>
-										<td align="right"><label for="NMAAPI"><span data-i18n="API Key"></span>: </label></td>
-										<td><input type="input" id="NMAAPI" name="NMAAPI" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <button data-i18n="Test" class="btn btn-info" ng-click="TestNotification('nma')">Test</button></td>
-									</tr>
-									</table>
-									<span data-i18n="To get a free account/API key click"></span> <a href="https://www.notifymyandroid.com/" class="norm-link" target="_blank"><span class="norm-link" data-i18n="Here"></span></a><br>
-									<br>
 								</div>
 							</div>
 							<div class="row-fluid">
 								<div class="span6">
-									<h2><span data-i18n="Pushbullet"></span>:</h2>
+									<h2>Pushbullet (iOS/Android/Windows):</h2>
 									<table class="display" id="pushbullettable" border="0" cellpadding="0" cellspacing="0">
 									<tr>
 										<td align="right" style="width:80px"><span data-i18n="Enabled"></span>:</td>
@@ -428,7 +415,7 @@
 									<br>
 								</div>
 								<div class="span6">
-									<h2>Pushsafer (iOS/Android/Windows10) + <span data-i18n="ImageURL"></span>:</h2>
+									<h2>Pushsafer (iOS/Android/Windows) + <span data-i18n="ImageURL"></span>:</h2>
 									<table class="display" id="pushsafertable" border="0" cellpadding="0" cellspacing="0">
 									<tr>
 										<td align="right" style="width:80px"><span data-i18n="Enabled"></span>:</td>
